# dbml-view

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.claude/: launch.json
.github/workflows/: ci.yml  desktop.yml
apps/desktop/: package.json
apps/desktop/scripts/: tauri.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: _setup.ts  app.spec.ts  colors.spec.ts  ctrl-f.spec.ts  detail.spec.ts  diagram-snapshot.spec.ts  diagram.spec.ts  header.spec.ts  hide.spec.ts  parse-error.spec.ts  settings.spec.ts  smoke.spec.ts  structure-search.spec.ts  structure.spec.ts
apps/web/src/: env.d.ts  main.ts  style.css
samples/: README.md  colors.dbml  edge-cases.dbml  large.dbml  medium.dbml  small.dbml  tablegroup.dbml
scripts/: update-linux-snapshots.sh  version.d.mts  version.mjs
