[package]
name = "dbml-view"
version = "0.0.0"
description = "Read-only DBML viewer (desktop shell)"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "DBMLView"
path = "src/main.rs"

[lib]
name = "dbml_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-single-instance = "2.4"
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
